<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="listener"
            type="com.ducnv.moviehunt.ui.login.LoginListener" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFB000">
        <androidx.appcompat.widget.AppCompatImageView
            app:layout_constraintVertical_bias="0.75"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_mask"
            android:layout_width="60dp"
            android:layout_height="60dp"
            tools:ignore="MissingConstraints" />
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="@dimen/dimen_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintWidth_percent="0.85"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_login_welcome"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:text="@string/str_login_please"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/str_login_email_address"
                    app:counterMaxLength="20"
                    app:layout_constraintTop_toBottomOf="@id/tv_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:drawableEnd="@drawable/ic_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:textColor="#1D2226"
                        android:textColorHint="#95989A"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/view_email"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="#707070"
                    app:layout_constraintTop_toBottomOf="@id/text_input_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/str_login_password"
                    app:counterMaxLength="15"
                    app:endIconDrawable="@drawable/selector_ic_eye"
                    app:endIconMode="password_toggle"
                    app:endIconTint="#FF7500"
                    app:layout_constraintTop_toBottomOf="@id/view_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:imeOptions="actionDone"
                        android:id="@+id/editText_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:textColor="#1D2226"
                        android:textColorHint="#95989A"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/view_password"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="#707070"
                    app:layout_constraintTop_toBottomOf="@id/text_input_password" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/str_login_forgot_password"
                    android:textColor="#FF7500"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/text_input_password" />

                <androidx.appcompat.widget.AppCompatButton
                    app:onSingleClick="@{()->listener.onLoginClicked()}"
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/bg_button_login"
                    android:paddingTop="@dimen/dimen_5dp"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:text="@string/str_login"
                    android:textColor="@color/clr_white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_login_other"
                    app:layout_constraintStart_toStartOf="@id/tv_login_other"
                    app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_login_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:singleLine="true"
                    android:text="@string/str_login_using_social_media"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_login" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_group_login_social_media"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_login_other" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintTop_toBottomOf="@id/card_view"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/str_dont_have_account"
                tools:ignore="MissingConstraints" />
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="#FF7300"
                android:paddingStart="5dp"
                android:text="@string/str_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>